# lin

./: .bazelrc  .clang-format  .gitignore  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  LICENSE  Makefile  README.md  WORKSPACE  library.json  lin.hpp  platformio.ini  setup.py  test_lin.py
docs/: Doxyfile  DoxygenLayout.xml
examples/: backward_sub.cpp  qr.cpp
include/: lin.hpp
include/algorithms/: backward_sub.hpp  qr.hpp
include/algorithms/inl/: backward_sub.inl  qr.inl
include/core/matrix/: matrix.hpp  traits.hpp
include/core/matrix/inl/: matrix.inl
include/core/tensor/: base.hpp  base_reference.hpp  dimensions.hpp  generators.hpp  operations.hpp  stream.hpp  stream_reference.hpp  tensor.hpp  traits.hpp
include/core/tensor/inl/: base.inl  base_reference.inl  dimensions.inl  generators.inl  operations.inl  stream.inl  stream_reference.inl  tensor.inl
include/core/vector/: operations.hpp  traits.hpp  vector.hpp
include/core/vector/inl/: operations.inl  vector.inl
include/lin/: core.hpp  factorizations.hpp  generators.hpp  math.hpp  queries.hpp  references.hpp  substitutions.hpp  views.hpp
include/lin/core/: config.hpp  matrix.hpp  operations.hpp  tensor.hpp  traits.hpp  types.hpp  vector.hpp
include/lin/core/config/: assert.hpp  types.hpp
include/lin/core/matrix/: matrix.hpp
include/lin/core/matrix/inl/: matrix.inl
include/lin/core/operations/: element_wise_operator.hpp  functors.hpp  mapping_transpose.hpp  matrix_operations.hpp  stream_element_wise_operator.hpp  tensor_operations.hpp  tensor_operators.hpp  vector_operations.hpp
include/lin/core/tensor/: base.hpp  dimensions.hpp  operations.hpp  operators.hpp  stream.hpp  tensor.hpp
include/lin/core/tensor/inl/: base.inl  (+5 more)
include/lin/core/traits/: expressions.hpp  matrix.hpp  tensor.hpp  traits.hpp  utilities.hpp  vector.hpp
include/lin/core/types/: base.hpp  buffer.hpp  const_base.hpp  constant_buffer.hpp  dimensions.hpp  mapping.hpp  matrix.hpp  stream.hpp  tensor.hpp  vector.hpp
include/lin/core/vector/: operations.hpp  vector.hpp
include/lin/factorizations/: chol.hpp  qr.hpp
include/lin/factorizations/inl/: chol.inl  qr.inl
include/lin/generators/: constants.hpp  diagonal.hpp  identity.hpp  randoms.hpp  stream_constants.hpp  stream_diag.hpp  stream_diagonal.hpp  stream_identity.hpp
include/lin/generators/inl/: constants.inl  identity.inl  randoms.inl
include/lin/math/: functors.hpp  operations.hpp
include/lin/queries/: functors.hpp  operations.hpp  operators.hpp  types.hpp
include/lin/references/: base_reference.hpp  diagonal_mapping_reference.hpp  diagonal_stream_reference.hpp  mapping_reference.hpp  matrix_stream_reference.hpp  stream_reference.hpp  tensor_mapping_reference.hpp  tensor_stream_reference.hpp  vector_mapping_reference.hpp  vector_stream_reference.hpp
include/lin/references/inl/: base_reference.inl  mapping_reference.inl  stream_reference.inl
include/lin/substitutions/: backward_subsitution.hpp  backward_substitution.hpp  forward_substitution.hpp
include/lin/substitutions/inl/: backward_substitution.inl  forward_substitution.inl
include/lin/views/: const_tensor_view.hpp  matrix_view.hpp  tensor_view.hpp  vector_view.hpp  view.hpp
lin/: BUILD  module.bzl  queries.hpp
lin/core/: config.hpp  traits.hpp  types.hpp
lin/core/operations/: stream_multiply.hpp  stream_transpose.hpp  tensor_operators.hpp  vector_operations.hpp
lin/core/traits/: utilities.hpp  vector.hpp
lin/core/types/: base.hpp  dimensions.hpp  mapping.hpp  tensor.hpp
lin/factorizations/: chol.hpp  qr.hpp
lin/generators/: diagonal.hpp  stream_constants.hpp  stream_diagonal.hpp  stream_identity.hpp
lin/math/: operations.hpp
lin/queries/: functors.hpp  operations.hpp
lin/references/: matrix_mapping_reference.hpp  vector_mapping_reference.hpp  vector_stream_reference.hpp
lin/views/: const_matrix_view.hpp  const_vector_view.hpp  tensor_view.hpp
src/: lin_generators_randoms.cpp
test/: BUILD  BUILD.bazel  algorithms_test.cpp  core_test.cpp  module_test.bzl  test.bzl  test.hpp
test/core/: matrix_matrix_test.cpp  operations_functors_test.cpp  operations_tensor_operations_test.cpp  operations_tensor_operators_test.cpp  operations_vector_operations_test.cpp  tensor_operations_test.cpp  tensor_operators_test.cpp  traits_test.cpp  types_matrix_test.cpp  types_vector_test.cpp  vector_operations_test.cpp  vector_vector_test.cpp
test/factorizations/: chol_test.cpp  qr_test.cpp
test/generators/: constants_test.cpp  diagonal_test.cpp  identity_test.cpp  randoms_test.cpp
test/math/: math_functors_test.cpp  math_operations_test.cpp
test/queries/: queries_functors_test.cpp  queries_operations_test.cpp  queries_operators_test.cpp
test/references/: base_reference_test.cpp  mapping_reference_test.cpp  stream_reference_test.cpp
test/substitutions/: backward_substitution_test.cpp  forward_substitution_test.cpp
test/test_core/: test_traits.cpp
test/views/: matrix_views_test.cpp  vector_views_test.cpp
tools/: whitespace
(+15 files in other folders)
